# proc-macro-error

./: .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  Readme.md  build.rs
.cargo/: env
.cargo/registry/cache/github.com-1ecc6299db9ec823/: dissimilar-1.0.2.crate  serde-1.0.107.crate  serde_derive-1.0.107.crate  serde_json-1.0.59.crate  syn-1.0.48.crate  toml-0.5.2.crate  trybuild-1.0.35.crate
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/3/r/: ryu
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/3/s/: syn
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/di/ss/: dissimilar
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/gl/ob/: glob
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/it/oa/: itoa
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/la/zy/: lazy_static
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/pr/oc/: proc-macro-hack  proc-macro2
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/qu/ot/: quote
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/se/rd/: serde  serde_derive  serde_json
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/te/rm/: termcolor
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/to/ml/: toml
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/tr/yb/: trybuild
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/un/ic/: unicode-xid
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/ve/rs/: version_check
.cargo/registry/index/github.com-1ecc6299db9ec823/.cache/wi/na/: winapi  winapi-i686-pc-windows-gnu  winapi-util  winapi-x86_64-pc-windows-gnu
.cargo/registry/src/github.com-1ecc6299db9ec823/dissimilar-1.0.2/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/serde-1.0.107/: Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/serde_derive-1.0.107/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/serde_json-1.0.59/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/syn-1.0.48/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/toml-0.5.2/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/trybuild-1.0.35/: .cargo_vcs_info.json  Cargo.toml
.github/: dependabot.yml
ci/: try_to_recover.sh
proc-macro-error/: Cargo.toml  release.toml
proc-macro-error-attr/: Cargo.toml  LICENSE-APACHE  build.rs  release.toml
proc-macro-error-attr/src/: lib.rs  parse.rs  settings.rs
proc-macro-error-attr/tests/: macro-errors.rs
proc-macro-error-attr/tests/ui/: not_proc_macro.rs  not_proc_macro.stderr  unknown_setting.rs  unknown_setting.stderr
proc-macro-error-test/: Cargo.toml
proc-macro-error-test/src/: lib.rs
proc-macro-error-test/tests/: macro-errors.rs  ok.rs
proc-macro-error-test/tests/ui/: call_site_many.rs  call_site_single.rs  direct_trigger.rs  direct_trigger.stderr  option_expect.rs  result_expect.rs  result_expect.stderr  result_unwrap.rs  span_many.rs  span_single.rs  span_single.stderr  span_two.rs  span_two.stderr  unrelated_panic.rs
proc-macro-error-test/tests/ui-multi/: multi-error.stderr
proc-macro-error-test/tests/ui-single/: call_site_many.stderr  call_site_single.rs  call_site_single.stderr  direct_trigger.stderr  option_expect.rs  option_expect.stderr  result_unwrap.rs  result_unwrap.stderr  span_many.rs  span_many.stderr  span_single.rs
proc-macro-error/src/: dummy.rs  lib.rs  multi.rs  nightly.rs  single.rs  stable.rs
src/: diagnostic.rs  fallback.rs  lib.rs  macros.rs  nightly.rs
src/imp/: delegate.rs
test-crate/: Cargo.toml  lib.rs
test-crate/proc-macro-hack-test/: Cargo.toml  README.md
test-crate/proc-macro-hack-test/demo-hack-impl/: Cargo.toml
test-crate/proc-macro-hack-test/demo-hack-impl/src/: lib.rs
test-crate/proc-macro-hack-test/example/: Cargo.toml
test-crate/src/: lib.rs
test-crate/tests/: macro-errors-multi.rs  macro-errors-single.rs  macro-errors.rs  ok.rs
test-crate/tests/ui/: abort.stderr  call_site.stderr  call_site_many.rs  call_site_single.rs  direct_trigger.rs  multi-error.rs  multi-error.stderr  option_expect.rs  option_expect.stderr  result_expect.rs  result_unwrap.rs  span_many.rs  span_single.rs  span_two.rs  unrelated_panic.rs
test-crate/tests/ui-multi/: multi-error.rs
test-crate/tests/ui-post_1.39/: call_site.stderr
test-crate/tests/ui-pre_1.39/: abort.stderr  call_site.stderr  multi-error.stderr
test-crate/tests/ui-single/: call_site_many.rs  call_site_single.rs  direct_trigger.rs  option_expect.rs  result_expect.rs  result_unwrap.rs  span_many.rs  span_single.rs  span_two.rs  unrelated_panic.rs  unrelated_panic.stderr
tests/: macro-errors.rs
tests/ui/: abort.rs  abort.stderr  append_dummy.stderr  children_messages.stderr  dummy.rs  dummy.stderr  emit.rs  emit.stderr  explicit_span_range.stderr  misuse.stderr  multiple_tokens.stderr  not_proc_macro.stderr  option_ext.stderr  proc_macro_hack.stderr  result_ext.stderr  to_tokens_span.stderr  unknown_setting.stderr  unrelated_panic.stderr
