[package]
name = "proc-macro-error-attr"
version = "1.0.3"
authors = ["CreepySkeleton <creepy-skeleton@yandex.ru>"]
edition = "2018"
description = "Attribute macro for proc-macro-error crate"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/CreepySkeleton/proc-macro-error"

build = "build.rs"

[lib]
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
quote = "1"
proc-macro2 = "1"
syn-mid = "0.5"
# "derive" is for `Attribute`, "parsing" is for `Parse`
syn = { version = "1", default-features = false, features = ["derive", "parsing", "proc-macro", "printing"] }

[build-dependencies]
version_check = "0.9"
