[package]
name = "proc-macro-error-test"
version = "0.1.4"
authors = ["CreepySkeleton <creepy-skeleton@yandex.ru>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = { path = "../proc-macro-error"}
quote = "0.6"
proc-macro2 = "0.4"
syn = "0.15"

[dev-dependencies]
trybuild = "1.0"
