[package]
name = "proc-macro-error-test"
version = "0.2.1"
authors = ["CreepySkeleton <creepy-skeleton@yandex.ru>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { path = "../proc-macro-error"}
quote = "1"
proc-macro2 = "1"
syn = "1"

[dev-dependencies]
trybuild = "1.0"
