[package]
name = "proc-macro-error"
version = "0.2.4"
authors = ["CreepySkeleton <creepy-skeleton@yandex.ru>"]
description = "Drop-in replacement to panics in proc-macros"

repository = "https://github.com/CreepySkeleton/proc-macro-error"
readme = "../README.md"
keywords = ["proc-macro", "error", "errors"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"

edition = "2018"

[package.metadata.release]
tag-name = "v{{version}}"
pre-release-commit-message = "v{{version}}"
no-dev-version = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "1"
