[package]
name = "proc-macro-error"
version = "0.3.4"
authors = ["CreepySkeleton <creepy-skeleton@yandex.ru>"]
description = "Drop-in replacement to panics in proc-macros"

repository = "https://gitlab.com/CreepySkeleton/proc-macro-error"
readme = "../README.md"
keywords = ["proc-macro", "error", "errors"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT OR Apache-2.0"

edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "1"
proc-macro-error-attr = { path = "../proc-macro-error-attr", version = "0.3.4"}
