[package]
name = "test-crate"
version = "0.0.0"
authors = ["CreepySkeleton <creepy-skeleton@yandex.ru>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro-error = { path = "../" }
quote = "1"
proc-macro2 = "1"
syn = { version = "1", default-features = false, features = ["derive", "parsing", "proc-macro", "printing"] }
