[package]
name = "demo-hack-impl"
version = "0.0.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Demo of proc-macro-hack"
repository = "https://github.com/dtolnay/proc-macro-hack"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-error = { path = "../../../" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
